--- a/STA141b_Final.ipynb
+++ b/STA141b_Final.ipynb
@@ -5,7 +5,7 @@
    "id": "939830d9",
    "metadata": {},
    "source": [
-    "# Anlaysis of Jail Deaths in U.S."
+    "# Anlaysis of Jail Deaths in the U.S."
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "c86480d2",
    "metadata": {},
    "source": [
-    "https://www.reuters.com/investigates/special-report/usa-jails-graphic/"
+    "Clarissa Chan, Yuxi Jiang, Louise Li, Yichu Chen, Zhongwen Liang"
    ]
   },
   {
